fix: resolve tab layout problem of graph analyze

--- a/client/src/pages/graph-schema/index.less
+++ b/client/src/pages/graph-schema/index.less
@@ -6,6 +6,10 @@
   overflow: auto;
   width: 100%;
 
+  &-tab {
+    height: auto;
+  }
+
   :global {
     .card-canvas-container > .ant-collapse-content > .ant-collapse-content-box {
       padding: 0;
